tests/NormalTests/paczka1/fuzzy1/25768444.err
Error in line 13: 92BllhKwhf A960 49,4
Error in line 26: A786 S809 53,9
Error in line 7: TLXG83F A188 69,2
Error in line 30: TLXG83F S809 70,9
Error in line 33: TLXG-3F A7-6 56,5
